fix: footer spacing of support section

--- a/web/app/themes/platformlondon/style.css
+++ b/web/app/themes/platformlondon/style.css
@@ -1233,6 +1233,7 @@ footer .wp-block-navigation__container {
 
 footer .wp-block-navigation {
   margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 footer .wp-block-navigation-item {
